Fix scrollbar bug

--- a/flash/static/styles.css
+++ b/flash/static/styles.css
@@ -53,6 +53,7 @@ footer {
   left: 0;
   padding: 10px;
   position: absolute;
+  right: 0;
   text-align: center;
   width: 100%
 }
